# sailfish-silica

./: CMakeLists.txt
lib/: CMakeLists.txt  highlightimagebase.cpp  highlightimagebase.h  logging.cpp  logging.h  mousearea.cpp  mousearea.h  mousearea_p.h  rectangle.cpp  rectangle_p.h  sailfish-silica.pc.in  silicacontrol.cpp  silicacontrol.h  silicacontrol_p.h  silicaglobal.h  silicaimageprovider.cpp  silicaimageprovider.h  silicaimageprovider_p.h  silicaitem.cpp  silicaitem.h  silicaitem_p.h  silicapalette.cpp  silicapalette.h  silicapalette_p.h  silicascreen.cpp  silicascreen.h  silicascreen_p.h  silicatheme.cpp  silicatheme.h  silicatheme_p.h  silicathemeiconresolver.cpp  silicathemeiconresolver.h  silicathemeiconresolver_p.h  silicathemetransaction.cpp  silicathemetransaction.h  text.cpp  text_p.h  themecolors.cpp  themecolors.h  themedistancefield.cpp  (+1 more)
lib/silicabackground/: abstractfilter.cpp  abstractfilter.h  abstractfilter_p.h  convolutionfilter.cpp  convolutionfilter.h  convolutionfilter_p.h  fill.cpp  fill.h  filteredimage.cpp  filteredimage.h  kernel.cpp  kernel.h  material.cpp  repeatfilter.cpp  repeatfilter.h  resizefilter.cpp  resizefilter.h  sequencefilter.cpp  sequencefilter.h  sequencefilter_p.h  shaderfilter.cpp  shaderfilter.h  task.h
plugin/: CMakeLists.txt  animatedloader.cpp  animatedloader.h  applicationbackground.cpp  applicationbackground.h  autofill.cpp  autofill.h  autoscroll.cpp  autoscroll.h  autoscrollcontroller.cpp  autoscrollcontroller.h  backgroundrectangle.cpp  backgroundrectangle.h  buttonlayout.cpp  buttonlayout.h  declarativebounceeffect.cpp  declarativebounceeffect.h  declarativebusyindicatorsize.cpp  declarativebusyindicatorsize.h  declarativeclipboard.cpp  declarativeclipboard.h  declarativeconfig.cpp  declarativeconfig.h  declarativecover.cpp  declarativecover.h  declarativecoveraction.cpp  declarativecoveraction.h  declarativecoveractionarea.cpp  declarativecoveractionarea.h  declarativecoveractionlist.cpp  declarativecoveractionlist.h  declarativecoverwindow.cpp  declarativecoverwindow.h  declarativecutoutmode.cpp  declarativecutoutmode.h  declarativedatetime.cpp  declarativedatetime.h  declarativedialogresult.cpp  declarativedialogresult.h  declarativedialogstatus.cpp  (+115 more)
plugin/background/: CMakeLists.txt  plugin.cpp  squareimageprovider.cpp  squareimageprovider.h  squaretexturefactory.cpp  squaretexturefactory.h
plugin/background/qml/: qmldir
plugin/qml/: ApplicationWindow.qml  BackgroundItem.qml  ColorPicker.qml  ColorPickerDialog.qml  ContextMenu.qml  CoverPlaceholder.qml  DatePicker.qml  DatePickerDialog.qml  DialogHeader.qml  DockedPanel.qml  Drawer.qml  ExpandingSectionGroup.qml  FullscreenContentPage.qml  GridItem.qml  HighlightBar.qml  HorizontalScrollDecorator.qml  IconButton.qml  IconTextSwitch.qml  InteractionHintLabel.qml  Keypad.qml  Label.qml  ListItem.qml  MiniComboBox.qml  PageHeader.qml  PageStack.js  PageStack.qml  PasswordField.qml  ProgressBar.qml  PullDownMenu.qml  PulleyAnimationHint.qml  RemorseItem.qml  SearchField.qml  SilicaFlickable.qml  SilicaGridView.qml  SilicaListView.qml  Slider.qml  SlideshowView.qml  Switch.qml  TextSwitch.qml  TimePicker.qml  (+3 more)
plugin/qml/private/: AutoScrollController.qml  BannerBackground.qml  BoundsBehavior.qml  ClockItem.qml  ComboBoxController.qml  CoverWindow.qml  DateGrid.qml  FastScrollAnimation.qml  GestureHintAnimation.qml  GridItemRemorseContainer.qml  IconGridViewBase.qml  KeypadButton.qml  LayoutGrid.qml  NoticeItem.qml  PageEdgeTransition.qml  PageOrientationTransition.qml  PageStackIndicator.qml  PulleyMenuBase.qml  QuickScrollArea.qml  QuickScrollButton.qml  RemorseBase.qml  ReturnToHomeHint.qml  ReturnToHomeHintCounter.qml  Scrollbar.qml  Slideable.qml  SliderBase.qml  SliderValueLabel.qml  SwipeItem.qml  TabBar.qml  TabButton.qml  TabView.qml  TextBase.qml  TimePickerGlassItem.qml  VerticalScrollBase.qml  ViewItem.qml  VirtualKeyboardObserver.qml  YearMonthMenu.qml  ZoomableFlickable.qml
